# RocketStocks

./: .dockerignore  .env.example  .gitignore  Backtest.html  Dockerfile  README.md  SMA_10_50_ADX_Strategy.html  SMA_10_50_Strategy.html  SMA_ADX_Strategy.html  after.csv  analysis.py  backtest.py  backtesting.py  before.csv  bot.py  charting.py  config.json  config.py  data.py  docker-compose.deploy.yml  docker-compose.yml  example.env  fetch-schwab-token.bat  logconfig.json  pyproject.toml  quote.json  requirements.txt  rocketstocks.py  scheduler.py  stockdata.csv  stockdata.py  strategies.py  tickers.txt  todo.txt  utils.py  yfinance code.ipynb
.github/workflows/: docker-publish.yml
auto_collect/: SQQQ.csv  scheduler.py
auto_collect/test/: SQQQ.csv
data/: QQQ.csv  tickers.txt
data.old/CSV/: ANF.csv  INTC.csv  MARA.csv  NVDA.csv  O.csv  PLTR.csv  PSNY.csv  SQQQ.csv  TOST.csv  TQQQ.csv  tickers.txt
data.old/analysisANF/: ADI.txt  ADX.txt  MACD.txt  OBV.txt  RSI.txt  STOCH.txt
data.old/analysisMARA/: ADI.txt  ADX.txt  MACD.txt  OBV.txt  RSI.txt  STOCH.txt
data.old/analysisNVDA/: ADI.txt  ADX.txt  MACD.txt  OBV.txt  RSI.txt  STOCH.txt
data.old/analysisTOST/: ADI.txt  ADX.txt  MACD.txt  OBV.txt  RSI.txt  STOCH.txt
data.old/historical_data/: TQQQ.csv  auto_collect.py
discord/: bot.py  bot2.py  config.py
discord/attachments/: TOST.csv
discord/cogs/: alerts.py  charts.py  cog_alerts.py  cog_charts.py  cog_reports.py  cog_tests.py  data.py  greetings.py  reports.py  tests.py  utils.py  watchlists.py
docs/alerts/: breakout.md  classification.md  earnings_mover.md  market_alert.md  market_mover.md  momentum_confirmation.md  overview.md  popularity_surge.md  volume_accumulation.md  watchlist_mover.md
historical_data/: QQQ.csv
src/rocketstocks/: __main__.py
src/rocketstocks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stockdata/: ape_wisdom.py  apewisdom.py  capitol_trades.py  capitoltrades.py  db.py  nasdaq.py  news.py  schwab.py  schwab_client.py  sec.py  stock_data.py  stockdata.py  trading_view.py  tradingview.py  watchlists.py
tests/: conftest.py
tests/api/: conftest.py  test_batches.py  test_cli.py  test_client.py  test_client_phase2.py  test_exporters.py  test_factory.py
tests/backtest/: conftest.py  test_cli.py  test_correlation.py  test_data_prep.py  test_filters.py  test_regime.py  (+7 more)
utils/: all_tickers.csv  plots.json  signals.json  strategies.csv  strategies.json
(+324 files in other folders)
