[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketstocks"
version = "0.5.0"
requires-python = ">=3.13"
dependencies = [
    "APScheduler",
    "discord.py",
    "pandas-datareader",
    "yfinance",
    "pandas-ta-classic",
    "mplfinance",
    "Backtesting",
    "tradingview_screener",
    "newsapi-python",
    "table2ascii",
    "psycopg2-binary",
    "ratelimit",
    "pandas_market_calendars",
    "schwab-py",
    "beautifulsoup4",
    "numpy>=2.4.0",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]
